# careflow

./: .gitignore  README.md
backend/: .env.template  README.md  pyproject.toml  runner-template.py
backend/app/: main.py
backend/app/database/: __init__.py
backend/app/routers/: admin.py  doctor.py  patient.py  prescription.py  receptionist.py  record.py
frontend/: README.md  index.html  package.json  tailwind.config.ts  tsconfig.app.json
frontend/src/: App.tsx  Index.tsx  Login.tsx  globals.css  main.tsx
frontend/src/components/: dashboard-layout.tsx  nav-user.tsx
frontend/src/dashboards/admin/: AdminDashboard.tsx  AdminProfile.tsx  AdminSettings.tsx  AdminUsers.tsx
frontend/src/dashboards/doctor/: DoctorAppointmentDetails.tsx  DoctorAppointments.tsx  DoctorDashboard.tsx  DoctorPatientRecords.tsx  DoctorPrescriptions.tsx  DoctorProfile.tsx
frontend/src/dashboards/patient/: PatientAppointments.tsx  PatientDashboard.tsx  PatientDocuments.tsx  PatientNewAppointment.tsx  PatientProfile.tsx  PatientTestResults.tsx
frontend/src/dashboards/receptionist/: ReceptionistAppointments.tsx  ReceptionistDashboard.tsx  ReceptionistProfile.tsx  ReceptionistSlots.tsx  ReceptionistSlotsManager.tsx  ReceptionistTestResults.tsx
frontend/src/hooks/: usePdfGenerator.tsx
frontend/src/lib/: data.ts  store.ts  types.ts
frontend/src/store/: AlldoctorStore.ts  appointmentStore.ts  doctorStore.ts  patientAppointmentStore.ts  receptionistAppointmentStore.tsx
