[project]
name = "careflow-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "python-jose[ecdsa]>=3.4.0",
    "tortoise-orm[asyncpg]>=0.25.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
